fixed overflow scrolling

--- a/css/simulator.css
+++ b/css/simulator.css
@@ -21,6 +21,7 @@
     padding-right: 5px;
     padding-bottom: 1px;
     margin: 0px;
+    height: 100%;
 }
 
 .Output {
@@ -33,7 +34,6 @@
     width: 100%;
     color: black;
     direction: ltr;
-    overflow-y: scroll;
 }
 
 .Output pre {
@@ -43,7 +43,7 @@
     padding-bottom: 1px;
     margin: 0px;
     height: 100%;
-    width: 100%;
+    overflow-y: scroll;
 }
 
 .Terminal {
